Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74572

When using a syntax highligher on the QQuickTextDocument, then triggering a rehighlight does not automatically update the text control using it

XMLWordPrintable

    • d0ffa3c42bb58eef0d2a2c3326984695a60e9667 (qt/qtdeclarative/dev) cd45937c2420e063346867b987ac47651511601c (qt/tqtc-qtdeclarative/5.15) a772871a7112b897d3eacf1a86a8bc7824eda161 (qt/qtdeclarative/6.1)
    • Bug Fixing Candidates

      When using a syntax highligher on the QQuickTextDocument, then triggering a rehighlight does not automatically update the text control using it. If something is done to trigger an update then it will make it update then.

        1. 1252042.diff
          0.7 kB
          Andy Shaw
        2. qtbug74572.zip
          12 kB
          Andy Shaw
        For Gerrit Dashboard: QTBUG-74572
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            andysh Andy Shaw
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: