TextEdit: update all glyphnodes on QTD::contentsChanged() signal

When a syntax highlighter changes formatting, the actual text doesn't
change, and QTextDocument emits contentsChanged() but not
contentsChange(int, int, int). We need to regenerate QSG nodes.
contentsChanged() is connected to QQuickTextControl::textChanged() and
from there to QQuickTextEdit::q_textChanged().

Pick-to: 6.1 5.15
Fixes: QTBUG-74572
Change-Id: Ia62aa6d3adfc9a9d496ee8811db4c2d963dd0c54
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>