src/quick/items/qquicktextedit.cpp
@@ -2362,6 +2362,14 @@ void QQuickTextEdit::q_textChanged()
     d->determineHorizontalAlignment();
     d->updateDefaultTextOption();
     updateSize();
+
+    markDirtyNodesForRange(0, d->document->characterCount(), 0);
+    polish();
+    if (isComponentComplete()) {
+        d->updateType = QQuickTextEditPrivate::UpdatePaintNode;
+        update();
+    }
+
     emit textChanged();
 }
 
